--- a/trade-management/src/main/resources/application.properties
+++ b/trade-management/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+## DB Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/trade_store
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.show-sql=true
